@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-08T00:43:37Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 2,
+  "timestamp" : "2022-05-08T08:11:57Z",
+  "count" : 66,
+  "count_minmax" : [ 0, 66 ],
+  "count_prev_day_inc" : 68,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 1,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
 }
