@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T00:43:37Z",
+  "timestamp" : "2022-05-08T08:11:57Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 132,
-  "uniques" : 9,
+  "count" : 198,
+  "uniques" : 10,
   "views" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 66,
+      "count_minmax": [ 0, 66 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
