@@ -1,5 +1,5 @@
 {
-  "count": 124,
+  "count": 190,
   "uniques": 1,
   "views": [
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 66,
       "uniques": 1
     }
   ]
