@@ -1,3 +1,9 @@
+2022-05-08T08:11:57Z:
+* notice: last 14d: all unq: 190 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 132 9
+* notice: next accum: outdated-all outdated-unq / all unq: 8 2 / 198 10
+* notice: prev json diff // prev day diff: unq all: +1 +66 / -0 -0 // +2 +68 / -0 -0
+
 2022-05-08T00:43:37Z:
 * notice: last 14d: all unq: 124 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 130 8
